add photo quote

--- a/quotes.html
+++ b/quotes.html
@@ -331,5 +331,19 @@ by machines of loving grace.
 The universe is not only queerer than we think, it is queerer than we <i>can</i> think.
 <br>	- J. B. S. Haldane<br><br>
 
-	
+"Poetry and progress are like two ambitious men who hate one another with an instinctive hatred, and when they meet
+upon the same road, one of them has to give place. If photography is allowed to supplement art in some of its
+functions, it will soon have supplanted or corrupted it altogether, thanks to the stupidity of the multitude which is
+its natural ally. It is time, then, for it to return to its true duty, which is to be the servant of the sciences and
+arts— but the very humble servant, like printing or shorthand, which have neither created nor supplemented
+literature. Let it hasten to enrich the tourist’s album and restore to his eye the precision which his memory may
+lack; let it adorn the naturalist’s library, and enlarge microscopic animals; let it even provide information to
+corroborate the astronomer’s hypotheses; in short, let it be the secre­tary and clerk of whoever needs an absolute
+factual exac­titude in his profession—up to that point nothing could be better. Let it rescue from oblivion those
+tumbling ruins, those books, prints and manuscripts which time is devouring, precious things whose form is dissolving
+and which demand a place in the archives of our memory—— it will be thanked and applauded. But if it be allowed to
+encroach upon the domain of the impalpable and the imaginary, upon anything whose value depends solely upon the
+addition of something of a man’s soul, then it will be so much the worse for us!"
+<br>    - Baudelaire on Photography in 1859<br><br>
+
 </body></html>
