--- a/faq.html
+++ b/faq.html
@@ -41,37 +41,24 @@ Replies to some questions that I am frequently asked.
 <strong>Q: Quantum computing is getting a lot of buzz and money. Has any quantum computer
 so far performed a computation? That is, taken some inputs and given a meaningful (and useful)
 output or response?</strong><br>
-The short answer is yes. Quantum computers have performed meaningful computations, but not
-yet ones that give useful advantage, i.e. ones where using classical computation is outperformed.
-Some examples are
-calculating the ground state energy of molecules
-<a href="https://arxiv.org/abs/1704.05018" target="_blank">[1]</a>
-<a href="https://arxiv.org/abs/2004.04174" target="_blank">[2]</a>
-<a href="https://arxiv.org/abs/2012.00921" target="_blank">[3]</a>,
-MAXCUT optimization
-<a href="https://arxiv.org/abs/1812.01041" target="_blank">[4]</a>, or
-classification tasks
-<a href="https://arxiv.org/abs/2012.04145" target="_blank">[5]</a>
-<a href="https://arxiv.org/abs/1712.05771" target="_blank">[6]</a>.
-While these do give accurate answers for non-trival problems by running on real quantum hardware,
-the instances sizes are still very small. <strong>(Note 7/2024: This paragraph needs updating!)</strong><br><br>
+The short answer is yes. Quantum computers have performed meaningful computations, and sometimes these computations
+outperform classical computers, showing an advantage. However, those cases where there are advantage are so far for
+relatively limited and esoteric benchmarks.
 
-When asking about milestones for quantum computer performance, clear terminology is important.
-I wrote
-<a href="https://medium.com/@wjzeng/clarifying-quantum-supremacy-better-terms-for-milestones-in-quantum-computation-d15ccb53954f" target="_blank">a short, useful taxonomy in this post</a>.
-Recently, an
-<a href="https://www.nature.com/articles/s41586-019-1666-5" target="_blank">example of quantum supremacy was demonstrated</a>,
-which means that some computation was performed
-that would be intractable to perform classically and that - in the computational complexity sense -
-we believe it to be hard for a classical computer and easy for a quantum one. I'd hesitate to say that this was a useful calcuation,
+An example of this is in
+<a href="https://arxiv.org/abs/2304.11119">random circuit sampling</a>.
+I'd hesitate to say this was a useful calcuation,
 though it may have application to
 <a href="https://www.quantamagazine.org/how-to-turn-a-quantum-computer-into-the-ultimate-randomness-generator-20190619/" target="_blank">
     generating certifiable random numbers.</a> I co-wrote a
 <a href="https://medium.com/@sohaib.alam/unpacking-the-quantum-supremacy-benchmark-with-python-67a46709d" target="_blank">short blog post</a>
 about what the supremacy calculation does that covers the main idea using some short Python snippets.
-<br><br>
 
-When it comes to performing a valuable computation, we recently released some work on the required
+When asking about milestones for quantum computer performance, clear terminology is important.
+I wrote
+<a href="https://medium.com/@wjzeng/clarifying-quantum-supremacy-better-terms-for-milestones-in-quantum-computation-d15ccb53954f" target="_blank">a short, useful taxonomy in this post</a>.
+
+When it comes to performing a valuable computation, I've done some work on the required
 resources for derivative pricing
 <a href="https://arxiv.org/abs/2012.03819" target="_blank">[7]</a>
 and there are there are other examples in chemistry
@@ -100,6 +87,11 @@ I'd recommend the summary in our <a href="https://arxiv.org/abs/2401.16317">whit
     review"</a>. For some more example applications you can see this
 <a href="https://arxiv.org/abs/2406.06625">survey of quantum computer applications</a> at Los
 Alamos National Lab.
+
+<br><br>
+<strong>Q: Can quantum computers speed up optimization?</strong>
+Read more in this overview whitepaper:
+<a href="https://arxiv.org/abs/2312.02279">Quantum Optimization: Potential, Challenges, and the Path Forward</a>
 
 <br><br>
 <strong>Q: What is quantum entanglement?</strong><br>
