add google blog to faq

--- a/faq.html
+++ b/faq.html
@@ -43,7 +43,10 @@ so far performed a computation? That is, taken some inputs and given a meaningfu
 output or response?</strong><br>
 The short answer is yes. Quantum computers have performed meaningful computations, and sometimes these computations
 outperform classical computers, showing an advantage. However, those cases where there are advantage are so far for
-relatively limited and esoteric benchmarks.
+relatively limited and esoteric benchmarks. I would recommend this recent
+<a href="https://research.google/blog/how-to-compare-a-noisy-quantum-processor-to-a-classical-computer/">overview
+    blogpost</a> from the Google Quantum team with some examples comparing
+noisy quantum processors to classical computations.
 
 An example of this is in
 <a href="https://arxiv.org/abs/2304.11119">random circuit sampling</a>.
