--- a/faq.html
+++ b/faq.html
@@ -46,7 +46,7 @@ outperform classical computers, showing an advantage. However, those cases where
 relatively limited and esoteric benchmarks. I would recommend this recent
 <a href="https://research.google/blog/how-to-compare-a-noisy-quantum-processor-to-a-classical-computer/">overview
     blogpost</a> from the Google Quantum team with some examples comparing
-noisy quantum processors to classical computations.
+noisy quantum processors to classical computations.<br><br>
 
 An example of this is in
 <a href="https://arxiv.org/abs/2304.11119">random circuit sampling</a>.
