add quantonation link

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
        target="_blank">public library</a> |
     <a href="will.html">questions</a> |
     <a href="http://unitary.fund" target="_blank">unitary fund</a> |
+    <a href="https://www.quantonation.com/" target="_blank">quantonation</a> |
     <a href="faq.html">f.a.q</a> |
     <br><br>
 
