--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             target="_blank">arXiv</a>]
         <br><br>
         We introduce an experimental program to demonstrate increasingly significant Local Friendliness violations,
-        proposing that the ``branch factor" be used to quantify the how much a system is like an observer. Then
+        proposing that <i>branch factor</i> be used to quantify how much a system is like an observer. Then
         we use ion trap and superconducting quantum computers to show proof-of-concept violations at the largest branch
         factors yet.
     </p>
