--- a/faq.html
+++ b/faq.html
@@ -182,7 +182,6 @@ I'll break down other specific suggestions based on current career stage:
     </li>
 </ul>
 
-<br>
 <strong id="algorithms">Q: Are there good references or overviews for learning quantum algorithms?</strong><br>
 For a general course on quantum algorithms I'd recommend these
 <a href="https://arxiv.org/abs/1907.09415">lecture notes</a> from Ronald de Wolf and these recent
@@ -190,6 +189,10 @@ For a general course on quantum algorithms I'd recommend these
 For specifically noisy intermediate
 scale quantum computing algorithms, which are typically more heuristic and less about computational complexity, there
 is a <a href="https://arxiv.org/abs/2101.08448">recent review article</a>.
+
+<br><br>
+<strong id="ny">Q: You are based in NY. Are there quantum tech organizations in the state?</strong><br>
+Yes! Here's is a <a href="https://map.proxi.co/r/S2FS9cjIOOHoN36fPnBP">map</a>.
 
 </body>
 
