more on quantum optimization

--- a/faq.html
+++ b/faq.html
@@ -93,6 +93,9 @@ Alamos National Lab.
 
 <br><br>
 <strong>Q: Can quantum computers speed up optimization?</strong>
+There have been some recent interesting benchmarks for heuristic improvements on near term devices for certain problems.
+E.g. <a href="https://www.science.org/doi/10.1126/sciadv.adm6761">JPM running on Quantinuum and studying the
+    LABS problem.</a>
 Read more in this overview whitepaper:
 <a href="https://arxiv.org/abs/2312.02279">Quantum Optimization: Potential, Challenges, and the Path Forward</a>
 
