add line and highlight

--- a/shared/math.html
+++ b/shared/math.html
@@ -65,7 +65,7 @@ While this example doesn’t break us out into different mathematical meaning en
 <br><br>
 We aren’t suggesting that neural networks are incapable of learning addition or other mathematical functions. Neural networks can, in theory, approximate any computable function. We are suggesting that the reason they haven’t yet learned addition is that they are not trained properly for this task. The computable function of addition is not wholly contained in the representations of meaning-as-use that comprise today’s training sets. Bigger training sets of math literature won’t get us there either as they are still the wrong type: representations. Mathematical meaning also requires the world itself.
 <br><br>
-<strong>We propose that mathematical meaning is distinct from meaning-as-use because mathematical meaning is encoded in the world itself and not its representations. If we want systems that understand mathematical reasoning, then we must give these systems access to physical reality. Not physics and mathematics literature, but actual physics in-action via experiments and simulators on physical substrates.</strong>
+<strong><highlight>We propose that mathematical meaning is distinct from meaning-as-use because mathematical meaning is encoded in the world itself and not its representations</highlight>. If we want systems that understand mathematical reasoning, then we must give these systems access to physical reality. Not physics and mathematics literature, but actual physics in-action via experiments and simulators on physical substrates.</strong>
 
 <br><br><br>
 
