add nature link for rcs

--- a/faq.html
+++ b/faq.html
@@ -48,8 +48,9 @@ relatively limited and esoteric benchmarks. I would recommend this recent
     blogpost</a> from the Google Quantum team with some examples comparing
 noisy quantum processors to classical computations.<br><br>
 
-An example of this is in
-<a href="https://arxiv.org/abs/2304.11119">random circuit sampling</a>.
+An example of this is in random circuit sampling
+[<a href="https://arxiv.org/abs/2304.11119" target="_blank">research paper</a>]
+[<a href="https://www.nature.com/articles/d41586-024-03288-3" target="_blank">overview article</a>].
 I'd hesitate to say this was a useful calcuation,
 though it may have application to
 <a href="https://www.quantamagazine.org/how-to-turn-a-quantum-computer-into-the-ultimate-randomness-generator-20190619/" target="_blank">
