Unitary Foundation update

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <a href="https://docs.google.com/document/d/1MSrb1cnKiE8B507Nub9IXK2d3wF3x7PP8_EFf2HbUJc/edit?usp=sharing"
        target="_blank">public library</a> |
     <a href="will.html">questions</a> |
-    <a href="http://unitary.fund" target="_blank">unitary fund</a> |
+    <a href="http://unitary.foundation" target="_blank">unitary foundation</a> |
     <a href="https://www.quantonation.com/" target="_blank">quantonation</a> |
     <a href="faq.html">f.a.q</a> |
     <br><br>
@@ -52,7 +52,7 @@
         <li>make early stage investments in physics/compute tech as a partner at <a
                 href="https://www.quantonation.com/">quantonation</a>,</li>
         <li>support public goods in quantum tech by
-        running the non profit <a href="http://unitary.fund">unitary fund</a>,</li>
+        running the non profit <a href="http://unitary.foundation">unitary foundation</a>,</li>
         <li>and do <a href="https://scholar.google.com/citations?user=ctec7t4AAAAJ&hl=en">research</a> in quantum
                       computer architecture, quantum
         software/algorithm engineering, and quantum foundations.</li>
