update faq with some qml references

--- a/faq.html
+++ b/faq.html
@@ -62,14 +62,21 @@ When asking about milestones for quantum computer performance, clear terminology
 I wrote
 <a href="https://medium.com/@wjzeng/clarifying-quantum-supremacy-better-terms-for-milestones-in-quantum-computation-d15ccb53954f" target="_blank">a short, useful taxonomy in this post</a>.
 
+Often folks are interested in ways that quantum computers could speed up machine learning tasks. We have examples for 
+<a href="">classical training of LLMs</a> but most of the examples are for learning things about quantum systems
+<a href="https://arxiv.org/abs/2112.00778">[1]</a> and
+<a href="https://arxiv.org/abs/2502.07770">[2]</a> achieving "an expected reduction of measurement time
+from more than twenty million years to less than 15
+minutes" by using a photonic system to learn a Bosonic state.
+
 When it comes to performing a valuable computation, I've done some work on the required
 resources for derivative pricing
-<a href="https://arxiv.org/abs/2012.03819" target="_blank">[7]</a>
+<a href="https://arxiv.org/abs/2012.03819" target="_blank">[3]</a>
 and there are there are other examples in chemistry
-<a href="https://arxiv.org/abs/2011.03494" target="_blank">[8]</a>
-<a href="https://arxiv.org/abs/1902.10673" target="_blank">[9]</a>
+<a href="https://arxiv.org/abs/2011.03494" target="_blank">[4]</a>
+<a href="https://arxiv.org/abs/1902.10673" target="_blank">[5]</a>
 and prime factorization
-<a href="https://arxiv.org/abs/1905.09749">[10]</a>. Our <a href="https://arxiv.org/abs/2401.16317">whitepaper</a>
+<a href="https://arxiv.org/abs/1905.09749">[6]</a>. Our <a href="https://arxiv.org/abs/2401.16317">whitepaper</a>
 (esp. Figure 2) summarizes lots of the current literature around resource estimates for different applications. We're
 aiming to have a live version of these captured at <a href="https://metriq.info/progress">metriq.info/progress</a>.
 Note that there is much left to discover in applying quantum computers.
@@ -108,9 +115,9 @@ Check out this <a href="https://csferrie.medium.com/how-to-think-about-quantum-e
 <br><br>
 <strong>Q: Does anyone make art with quantum computers / quantum tech?</strong><br>
 There's been more then a few surprising creative uses already. There are folks looking at generating music
-<a href="http://quantummusic.org/" target="_blank">[1]</a>
-<a href="https://www.youtube.com/watch?v=YZDEgorn5Aw" target="_blank">[2]</a>
-<a href="https://arxiv.org/abs/2006.13849" target="_blank">[3]</a>.
+<a href="http://quantummusic.org/" target="_blank">[7]</a>
+<a href="https://www.youtube.com/watch?v=YZDEgorn5Aw" target="_blank">[8]</a>
+<a href="https://arxiv.org/abs/2006.13849" target="_blank">[9]</a>.
 There is also a growing field of quantum gaming. James Wooten has an excellent
 <a href="https://decodoku.medium.com/the-history-of-games-for-quantum-computers-a1de98859b5a">summary history of quantum computer games</a>
 (with mention of a mobile game that Jo and I made at the one of the worlds first quantum computer hackathons).
