add chemistry roadmap reference to faq

--- a/faq.html
+++ b/faq.html
@@ -82,6 +82,11 @@ aiming to have a live version of these captured at <a href="https://metriq.info/
 Note that there is much left to discover in applying quantum computers.
 <strong>I am optimistic that these resource requirements will continue to decrease.</strong>
 
+<strong>Q: I have heard that quantum computers might be useful for quantum simulation and quantum chemistry.
+    What size quantum computer might that need and when might they be available?</strong><br>
+I recommend this recent <a href="https://arxiv.org/abs/2506.19337">overview</a>. It looks like the near term of up to 100
+logical qubits could be useful for some very specific quantum chemistry applications.
+
 <br><br>
 <strong id="rsa">Q: When will quantum computers break RSA?</strong><br>
 Current estimates indicate that we need scaled up, error corrected quantum computers. We need
