add eisert and preskill paper to faq

--- a/faq.html
+++ b/faq.html
@@ -46,7 +46,10 @@ outperform classical computers, showing an advantage. However, those cases where
 relatively limited and esoteric benchmarks. I would recommend this recent
 <a href="https://research.google/blog/how-to-compare-a-noisy-quantum-processor-to-a-classical-computer/">overview
     blogpost</a> from the Google Quantum team with some examples comparing
-noisy quantum processors to classical computations.<br><br>
+noisy quantum processors to classical computations. <highlight>I would also recommend this
+    <a href="https://arxiv.org/abs/2510.19928>" target="_blank"> recent paper </a> by Eisert and Preskill
+    for the current state of the art across the academic literature
+</highlight> (though this is somewhat of a lagging indicator).<br><br>
 
 An example of this is in random circuit sampling
 [<a href="https://arxiv.org/abs/2304.11119" target="_blank">research paper</a>]
