add bitcoin refs

--- a/faq.html
+++ b/faq.html
@@ -105,6 +105,16 @@ For more details, I recommend this
 It discusses rough cost estimates for factoring and is accessible to general programmers.
 
 <br><br>
+<strong id="bitcoin">Q: What do quantum computers mean for bitcoins and blockchains?</strong><br>
+Quantum decryption could impact large amounts of blockchain and cryptocurreny technology. Project11 
+maintains a 
+<a href="https://www.projecteleven.com/bitcoin-risq-list">dashboard</a> of the billions of bitcoin 
+that are at risk and there is more across other chains. For a more thorough introduction and overview 
+of bitcoin and the quantum problem I recommend these overviews by Nic Castle: 
+[<a href="https://murmurationstwo.substack.com/p/bitcoin-and-the-quantum-problem-part">Part 1</a>]
+[<a href="https://murmurationstwo.substack.com/p/bitcoin-and-the-quantum-problem-part-47f">Part 2</a>]
+
+<br><br>
 <strong>Q: What is a good summary of the state of the art in useful quantum computing?</strong><br>
 I'd recommend the summary in our <a href="https://arxiv.org/abs/2401.16317">whitepaper</a>
 (esp. the resource estimates in Figure 2) and this review
