add quantum journal link to local friendliness paper

--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
         <u>2024.09.04</u> - <highlight>Towards violations of Local Friendliness with quantum computers</highlight>
         [<a href="https://arxiv.org/abs/2409.15302"
             target="_blank">arXiv</a>]
+        [<a href="https://quantum-journal.org/papers/q-2025-09-05-1851/" target="_blank">quantum</a>]
         <br><br>
         We introduce an experimental program to demonstrate increasingly significant Local Friendliness violations,
         proposing that <i>branch factor</i> be used to quantify how much a system is like an observer. Then
