no longer recent

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </p>
 
     Some topics that I am currently thinking about are covered in <highlight>this <a
-            href="https://youtu.be/bS85621GoAI">recent podcast</a>:
+            href="https://youtu.be/bS85621GoAI">podcast</a>:
     quantum computing, encryption and risk, agency and objective reality, technology and magic, and more...</highlight>
     <br><br>
 
